# mathtest

./: README.md  pyproject.toml
mathtest/: cli.py  questiontool.py
tests/: test_mathtest.py
